# fswp

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md
ai-interactions/: 2026-01-11-based-on-the-specmd-create-a-plan-for-this-proj.txt
plans/: PLAN.md  REFACTORING_PLAN.md
src/: async_preview.rs  cli.rs  config.rs  domain.rs  lib.rs  main.rs  preview.rs  tui.rs
src/domain/: decision_engine.rs
src/tui/: input.rs  mod.rs
