[package]
name = "fswp"
version = "0.1.0"
edition = "2021"

[lib]
name = "fswp"
path = "src/lib.rs"

[[bin]]
name = "fswp"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
trash = "4.0"
ratatui = "0.28"
crossterm = "0.28"
syntect = "5"
ratatui-image = "1"
image = "0.25"
pdfium-render = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
printpdf = "0.7"
